# proto/gen/go/proto/api/hello.pb.go
@@ -109,6 +109,93 @@ func (x *HelloResponse) GetMessage() string {
 	return ""
 }
 
+// HelloTraceRequest.
+type HelloTraceRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+}
+
+func (x *HelloTraceRequest) Reset() {
+	*x = HelloTraceRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_api_hello_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *HelloTraceRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*HelloTraceRequest) ProtoMessage() {}
+
+func (x *HelloTraceRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_api_hello_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use HelloTraceRequest.ProtoReflect.Descriptor instead.
+func (*HelloTraceRequest) Descriptor() ([]byte, []int) {
+	return file_proto_api_hello_proto_rawDescGZIP(), []int{2}
+}
+
+// HelloTraceResponse.
+type HelloTraceResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Message string `protobuf:"bytes,1,opt,name=message,proto3" json:"message,omitempty"`
+}
+
+func (x *HelloTraceResponse) Reset() {
+	*x = HelloTraceResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_proto_api_hello_proto_msgTypes[3]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *HelloTraceResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*HelloTraceResponse) ProtoMessage() {}
+
+func (x *HelloTraceResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_proto_api_hello_proto_msgTypes[3]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use HelloTraceResponse.ProtoReflect.Descriptor instead.
+func (*HelloTraceResponse) Descriptor() ([]byte, []int) {
+	return file_proto_api_hello_proto_rawDescGZIP(), []int{3}
+}
+
+func (x *HelloTraceResponse) GetMessage() string {
+	if x != nil {
+		return x.Message
+	}
+	return ""
+}
+
 var File_proto_api_hello_proto protoreflect.FileDescriptor
 
 var file_proto_api_hello_proto_rawDesc = []byte{
@@ -122,40 +209,51 @@ var file_proto_api_hello_proto_rawDesc = []byte{
 	0x0a, 0x0c, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x29,
 	0x0a, 0x0d, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12,
 	0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09,
-	0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x32, 0x5d, 0x0a, 0x08, 0x48, 0x65, 0x6c,
-	0x6c, 0x6f, 0x41, 0x50, 0x49, 0x12, 0x51, 0x0a, 0x05, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x15,
-	0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e,
-	0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x19, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x13, 0x62, 0x01, 0x2a, 0x12, 0x0e, 0x2f, 0x78, 0x75, 0x79, 0x75, 0x2f,
-	0x76, 0x31, 0x2f, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x42, 0xa6, 0x03, 0x5a, 0x0e, 0x78, 0x75, 0x79,
-	0x75, 0x2f, 0x76, 0x31, 0x3b, 0x78, 0x75, 0x79, 0x75, 0x56, 0x31, 0x92, 0x41, 0x92, 0x03, 0x12,
-	0x11, 0x0a, 0x08, 0x78, 0x75, 0x79, 0x75, 0x20, 0x41, 0x50, 0x49, 0x32, 0x05, 0x31, 0x2e, 0x30,
-	0x2e, 0x30, 0x22, 0x09, 0x2f, 0x78, 0x75, 0x79, 0x75, 0x2f, 0x61, 0x70, 0x69, 0x2a, 0x02, 0x01,
-	0x02, 0x32, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a,
-	0x73, 0x6f, 0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e,
-	0x2f, 0x6a, 0x73, 0x6f, 0x6e, 0x52, 0x64, 0x0a, 0x03, 0x34, 0x30, 0x33, 0x12, 0x5d, 0x0a, 0x47,
-	0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68, 0x65, 0x6e, 0x20, 0x74, 0x68,
-	0x65, 0x20, 0x75, 0x73, 0x65, 0x72, 0x20, 0x64, 0x6f, 0x65, 0x73, 0x20, 0x6e, 0x6f, 0x74, 0x20,
-	0x68, 0x61, 0x76, 0x65, 0x20, 0x70, 0x65, 0x72, 0x6d, 0x69, 0x73, 0x73, 0x69, 0x6f, 0x6e, 0x20,
-	0x74, 0x6f, 0x20, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65,
-	0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75,
-	0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x48, 0x0a, 0x03, 0x34,
-	0x30, 0x34, 0x12, 0x41, 0x0a, 0x2b, 0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77,
-	0x68, 0x65, 0x6e, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65,
-	0x20, 0x64, 0x6f, 0x65, 0x73, 0x20, 0x6e, 0x6f, 0x74, 0x20, 0x65, 0x78, 0x69, 0x73, 0x74, 0x73,
-	0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e,
-	0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x45, 0x0a, 0x03, 0x35, 0x30, 0x30, 0x12, 0x3e, 0x0a, 0x28,
-	0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68, 0x65, 0x6e, 0x20, 0x74, 0x68,
-	0x65, 0x20, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x20, 0x73, 0x65, 0x72, 0x76, 0x65,
-	0x72, 0x20, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78,
-	0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x53, 0x0a, 0x03,
-	0x35, 0x30, 0x33, 0x12, 0x4c, 0x0a, 0x36, 0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20,
-	0x77, 0x68, 0x65, 0x6e, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
-	0x65, 0x20, 0x69, 0x73, 0x20, 0x74, 0x65, 0x6d, 0x70, 0x6f, 0x72, 0x61, 0x72, 0x69, 0x6c, 0x79,
-	0x20, 0x75, 0x6e, 0x61, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x2e, 0x12, 0x12, 0x0a,
-	0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f,
-	0x72, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x22, 0x13, 0x0a, 0x11, 0x48, 0x65, 0x6c,
+	0x6c, 0x6f, 0x54, 0x72, 0x61, 0x63, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x2e,
+	0x0a, 0x12, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x54, 0x72, 0x61, 0x63, 0x65, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6d, 0x65, 0x73, 0x73, 0x61, 0x67, 0x65, 0x32, 0xc5,
+	0x01, 0x0a, 0x08, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x41, 0x50, 0x49, 0x12, 0x51, 0x0a, 0x05, 0x48,
+	0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x15, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x48,
+	0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x16, 0x2e, 0x78, 0x75,
+	0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x52, 0x65, 0x73, 0x70, 0x6f,
+	0x6e, 0x73, 0x65, 0x22, 0x19, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x13, 0x62, 0x01, 0x2a, 0x12, 0x0e,
+	0x2f, 0x78, 0x75, 0x79, 0x75, 0x2f, 0x76, 0x31, 0x2f, 0x68, 0x65, 0x6c, 0x6c, 0x6f, 0x12, 0x66,
+	0x0a, 0x0a, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x54, 0x72, 0x61, 0x63, 0x65, 0x12, 0x1a, 0x2e, 0x78,
+	0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x54, 0x72, 0x61, 0x63,
+	0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e,
+	0x76, 0x31, 0x2e, 0x48, 0x65, 0x6c, 0x6c, 0x6f, 0x54, 0x72, 0x61, 0x63, 0x65, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x62, 0x01, 0x2a,
+	0x12, 0x14, 0x2f, 0x78, 0x75, 0x79, 0x75, 0x2f, 0x76, 0x31, 0x2f, 0x68, 0x65, 0x6c, 0x6c, 0x6f,
+	0x2f, 0x74, 0x72, 0x61, 0x63, 0x65, 0x42, 0xa6, 0x03, 0x5a, 0x0e, 0x78, 0x75, 0x79, 0x75, 0x2f,
+	0x76, 0x31, 0x3b, 0x78, 0x75, 0x79, 0x75, 0x56, 0x31, 0x92, 0x41, 0x92, 0x03, 0x12, 0x11, 0x0a,
+	0x08, 0x78, 0x75, 0x79, 0x75, 0x20, 0x41, 0x50, 0x49, 0x32, 0x05, 0x31, 0x2e, 0x30, 0x2e, 0x30,
+	0x22, 0x09, 0x2f, 0x78, 0x75, 0x79, 0x75, 0x2f, 0x61, 0x70, 0x69, 0x2a, 0x02, 0x01, 0x02, 0x32,
+	0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a, 0x73, 0x6f,
+	0x6e, 0x3a, 0x10, 0x61, 0x70, 0x70, 0x6c, 0x69, 0x63, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x2f, 0x6a,
+	0x73, 0x6f, 0x6e, 0x52, 0x64, 0x0a, 0x03, 0x34, 0x30, 0x33, 0x12, 0x5d, 0x0a, 0x47, 0x52, 0x65,
+	0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68, 0x65, 0x6e, 0x20, 0x74, 0x68, 0x65, 0x20,
+	0x75, 0x73, 0x65, 0x72, 0x20, 0x64, 0x6f, 0x65, 0x73, 0x20, 0x6e, 0x6f, 0x74, 0x20, 0x68, 0x61,
+	0x76, 0x65, 0x20, 0x70, 0x65, 0x72, 0x6d, 0x69, 0x73, 0x73, 0x69, 0x6f, 0x6e, 0x20, 0x74, 0x6f,
+	0x20, 0x61, 0x63, 0x63, 0x65, 0x73, 0x73, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65, 0x73, 0x6f,
+	0x75, 0x72, 0x63, 0x65, 0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75, 0x79, 0x75,
+	0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x48, 0x0a, 0x03, 0x34, 0x30, 0x34,
+	0x12, 0x41, 0x0a, 0x2b, 0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68, 0x65,
+	0x6e, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x20, 0x64,
+	0x6f, 0x65, 0x73, 0x20, 0x6e, 0x6f, 0x74, 0x20, 0x65, 0x78, 0x69, 0x73, 0x74, 0x73, 0x2e, 0x12,
+	0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72,
+	0x72, 0x6f, 0x72, 0x52, 0x45, 0x0a, 0x03, 0x35, 0x30, 0x30, 0x12, 0x3e, 0x0a, 0x28, 0x52, 0x65,
+	0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68, 0x65, 0x6e, 0x20, 0x74, 0x68, 0x65, 0x20,
+	0x69, 0x6e, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x20, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x20,
+	0x65, 0x72, 0x72, 0x6f, 0x72, 0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a, 0x0e, 0x2e, 0x78, 0x75, 0x79,
+	0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x52, 0x53, 0x0a, 0x03, 0x35, 0x30,
+	0x33, 0x12, 0x4c, 0x0a, 0x36, 0x52, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x65, 0x64, 0x20, 0x77, 0x68,
+	0x65, 0x6e, 0x20, 0x74, 0x68, 0x65, 0x20, 0x72, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63, 0x65, 0x20,
+	0x69, 0x73, 0x20, 0x74, 0x65, 0x6d, 0x70, 0x6f, 0x72, 0x61, 0x72, 0x69, 0x6c, 0x79, 0x20, 0x75,
+	0x6e, 0x61, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x2e, 0x12, 0x12, 0x0a, 0x10, 0x1a,
+	0x0e, 0x2e, 0x78, 0x75, 0x79, 0x75, 0x2e, 0x76, 0x31, 0x2e, 0x45, 0x72, 0x72, 0x6f, 0x72, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -170,16 +268,20 @@ func file_proto_api_hello_proto_rawDescGZIP() []byte {
 	return file_proto_api_hello_proto_rawDescData
 }
 
-var file_proto_api_hello_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_proto_api_hello_proto_msgTypes = make([]protoimpl.MessageInfo, 4)
 var file_proto_api_hello_proto_goTypes = []interface{}{
-	(*HelloRequest)(nil),  // 0: xuyu.v1.HelloRequest
-	(*HelloResponse)(nil), // 1: xuyu.v1.HelloResponse
+	(*HelloRequest)(nil),       // 0: xuyu.v1.HelloRequest
+	(*HelloResponse)(nil),      // 1: xuyu.v1.HelloResponse
+	(*HelloTraceRequest)(nil),  // 2: xuyu.v1.HelloTraceRequest
+	(*HelloTraceResponse)(nil), // 3: xuyu.v1.HelloTraceResponse
 }
 var file_proto_api_hello_proto_depIdxs = []int32{
 	0, // 0: xuyu.v1.HelloAPI.Hello:input_type -> xuyu.v1.HelloRequest
-	1, // 1: xuyu.v1.HelloAPI.Hello:output_type -> xuyu.v1.HelloResponse
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
+	2, // 1: xuyu.v1.HelloAPI.HelloTrace:input_type -> xuyu.v1.HelloTraceRequest
+	1, // 2: xuyu.v1.HelloAPI.Hello:output_type -> xuyu.v1.HelloResponse
+	3, // 3: xuyu.v1.HelloAPI.HelloTrace:output_type -> xuyu.v1.HelloTraceResponse
+	2, // [2:4] is the sub-list for method output_type
+	0, // [0:2] is the sub-list for method input_type
 	0, // [0:0] is the sub-list for extension type_name
 	0, // [0:0] is the sub-list for extension extendee
 	0, // [0:0] is the sub-list for field type_name
@@ -215,6 +317,30 @@ func file_proto_api_hello_proto_init() {
 				return nil
 			}
 		}
+		file_proto_api_hello_proto_msgTypes[2].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*HelloTraceRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_proto_api_hello_proto_msgTypes[3].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*HelloTraceResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -222,7 +348,7 @@ func file_proto_api_hello_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_proto_api_hello_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   2,
+			NumMessages:   4,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
