# proto/gen/go/proto/api/hello.pb.gw.go
@@ -49,6 +49,24 @@ func local_request_HelloAPI_Hello_0(ctx context.Context, marshaler runtime.Marsh
 
 }
 
+func request_HelloAPI_HelloTrace_0(ctx context.Context, marshaler runtime.Marshaler, client HelloAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq HelloTraceRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.HelloTrace(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_HelloAPI_HelloTrace_0(ctx context.Context, marshaler runtime.Marshaler, server HelloAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq HelloTraceRequest
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.HelloTrace(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterHelloAPIHandlerServer registers the http handlers for service HelloAPI to "mux".
 // UnaryRPC     :call HelloAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -77,6 +95,31 @@ func RegisterHelloAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, s
 		}
 
 		forward_HelloAPI_Hello_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_HelloAPI_HelloTrace_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/xuyu.v1.HelloAPI/HelloTrace", runtime.WithHTTPPathPattern("/xuyu/v1/hello/trace"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_HelloAPI_HelloTrace_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_HelloAPI_HelloTrace_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -143,13 +186,39 @@ func RegisterHelloAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, c
 
 	})
 
+	mux.Handle("GET", pattern_HelloAPI_HelloTrace_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/xuyu.v1.HelloAPI/HelloTrace", runtime.WithHTTPPathPattern("/xuyu/v1/hello/trace"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_HelloAPI_HelloTrace_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_HelloAPI_HelloTrace_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
 var (
 	pattern_HelloAPI_Hello_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"xuyu", "v1", "hello"}, ""))
+
+	pattern_HelloAPI_HelloTrace_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"xuyu", "v1", "hello", "trace"}, ""))
 )
 
 var (
 	forward_HelloAPI_Hello_0 = runtime.ForwardResponseMessage
+
+	forward_HelloAPI_HelloTrace_0 = runtime.ForwardResponseMessage
 )
